- change apiversion - zookeeper download -> file

--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -17,7 +17,8 @@ spec:
     name: fs
   - port: 50070
     name: http
-  clusterIP: None
+#  clusterIP: None
+  type: "NodePort"
   selector:
     app: {{ template "hdfs-k8s.namenode.name" . }}
     release: {{ .Release.Name }}
@@ -110,7 +111,7 @@ data:
   # ad-hoc operation as specified by a user.
   custom-run.sh: {{ .Values.customRunScript | quote }}
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: StatefulSet
 metadata:
   name: {{ template "hdfs-k8s.namenode.fullname" . }}
