--- a/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
+++ b/charts/hdfs-namenode-k8s/templates/namenode-statefulset.yaml
@@ -120,12 +120,18 @@ metadata:
     chart: {{ template "hdfs-k8s.subchart" . }}
     release: {{ .Release.Name }}
 spec:
+  selector:
+    matchLabels:
+      app: {{ template "hdfs-k8s.namenode.name" . }}
+      chart: {{ template "hdfs-k8s.subchart" . }}
+      release: {{ .Release.Name }}
   serviceName: {{ template "hdfs-k8s.namenode.fullname" . }}
   replicas: 2
   template:
     metadata:
       labels:
         app: {{ template "hdfs-k8s.namenode.name" . }}
+        chart: {{ template "hdfs-k8s.subchart" . }}
         release: {{ .Release.Name }}
       {{- if .Values.podAnnotations }}
       annotations:
